tests/parsing/smtlib/v2.6/errors/055_declare-const_bad_sort_1.expected
File "tests/parsing/smtlib/v2.6/errors/055_declare-const_bad_sort_1.smt2", line 2, character 19-20:
2 | (declare-const foo _)
                       ^
Error while parsing a constant declaration, read the reserved word '_',
      but expected a sort.
